--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ header .container-fluid
 
 .number .container-fluid
 {
-    background-image: url('https://unsplash.it/3000/2000?image=685');
+    background-image: url('http://s3.amazonaws.com/digitaltrends-uploads-prod/2014/03/sapphire-vs-gorilla-glass-smartphone-screens.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
